; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_rbtree.c_rbtree_node_min.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_rbtree.c_rbtree_node_min.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rbnode = type { %struct.rbnode* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.rbnode* (%struct.rbnode*, %struct.rbnode*)* @rbtree_node_min to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.rbnode* @rbtree_node_min(%struct.rbnode* %0, %struct.rbnode* %1) #0 {
  %3 = alloca %struct.rbnode*, align 8
  %4 = alloca %struct.rbnode*, align 8
  store %struct.rbnode* %0, %struct.rbnode** %3, align 8
  store %struct.rbnode* %1, %struct.rbnode** %4, align 8
  br label %5

5:                                                ; preds = %11, %2
  %6 = load %struct.rbnode*, %struct.rbnode** %3, align 8
  %7 = getelementptr inbounds %struct.rbnode, %struct.rbnode* %6, i32 0, i32 0
  %8 = load %struct.rbnode*, %struct.rbnode** %7, align 8
  %9 = load %struct.rbnode*, %struct.rbnode** %4, align 8
  %10 = icmp ne %struct.rbnode* %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %5
  %12 = load %struct.rbnode*, %struct.rbnode** %3, align 8
  %13 = getelementptr inbounds %struct.rbnode, %struct.rbnode* %12, i32 0, i32 0
  %14 = load %struct.rbnode*, %struct.rbnode** %13, align 8
  store %struct.rbnode* %14, %struct.rbnode** %3, align 8
  br label %5

15:                                               ; preds = %5
  %16 = load %struct.rbnode*, %struct.rbnode** %3, align 8
  ret %struct.rbnode* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
